2013-09-17  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: The "duration" element was calculated wrong
        if the first element in the file wasn't the one with the smallest
        timestamp. To be precise, it was too short by the difference
        between the first timestamp and the smallest one (e.g with video
        sequences timestamped 80ms, 0ms, 40ms, 120ms... the duration was
        80ms too short).

2013-09-16  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.4.1.

        * mkvmerge: bug fix: fixed packet ordering regression introduced
        in 6.4.0 if --default-duration is used for a track.

2013-09-15  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.4.0.

        * mkvextract: new feature: Implemented extraction of Opus tracks
        into OggOpus files.

2013-09-14  Monty Montgomery  <xiphmont@gmail.com>

        * mkvinfo: bug fix: The track information summary enabled with
        -t/--track-info counted bytes in SimpleBlocks twice.

2013-07-19  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: CueRelativePosition was wrong for
        BlockGroups: it pointed to the Block inside the group instead of
        the BlockGroup itself. CueRelativePosition elements for
        SimpleBlock elements are not affected. Fixes #903.

2013-07-05  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: new feature: Implemented final Opus muxing.

2013-07-04  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: The "jobs" folder will be created in the same
        mmg.exe is located in for the portable version. The installed
        version will still keep the folder where has already been
        (%APP_DATA%\mkvtoolnix\jobs).

        * mmg: bug fix: Closing mmg's window while it was minimized caused
        mmg to appear hidden and unmovable when started the next time.

2013-07-03  Moritz Bunkus  <moritz@bunkus.org>

        * mmg: bug fix: Fixed overly long startup time with wxWidgets